Added unit tests and improved matcher structure
Added a new test project with unit tests for polygon utilities, region matching, and validation logic. Introduced a RegionMatchResult class for clearer result typing. Updated .gitignore for .NET artifacts, improved documentation in README, and registered the test project in the solution.

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,8 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 *.log
+**/bin/
+**/obj/
 
 # Visual Studio files
 .vs/
@@ -72,6 +74,12 @@ x86/
 # NuGet packages
 *.nupkg
 .nuget/
+*.snupkg
+project.assets.json
+project.nuget.cache
+*.nuget.dgspec.json
+*.nuget.g.props
+*.nuget.g.targets
 
 # Rider files
 .idea/
