Refactored project structure, removed data files and renamed a variable
Moved core classes to Models and Services folders for better organization. Renamed 'matched_locations' to 'matchedLocations' in RegionMatcher and updated related tests. Updated .gitignore to exclude input and output data directories. Removed sample input and output JSON files.

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,7 @@ TestResults/
 # Build output and auto-generated files for .NET projects
 LocationRegionMatcher/bin/
 LocationRegionMatcher/obj/
+
+# Data files
+LocationRegionMatcher/input/
+LocationRegionMatcher/output/
